--- a/wp-content/themes/reactfit/react-src/src/components/Header.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Header.css
@@ -1,5 +1,5 @@
 .site-header {
-  background: linear-gradient(#222,#222);
+  background: #222;
   color: #fff;
   position: sticky;
   top: 0;
@@ -87,7 +87,7 @@
     height: 0;
     overflow: hidden;
     transition: all .5s ease-in-out;
-    background: linear-gradient(#222f, #222c);
+    background: linear-gradient(rgba(34,34,34,1),rgba(34,34,34,0.9));
     display: flex;
     flex-direction: column;
   }
@@ -130,6 +130,7 @@
     visibility: visible;
     cursor: pointer;
     padding: 0.5rem 1rem;
+    background: rgba(34,34,34,0.9);
   }
 
   .hammy__top, .hammy__mid, .hammy__bot {
