--- a/wp-content/themes/reactfit/react-src/src/components/Footer.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Footer.css
@@ -7,7 +7,7 @@
 }
 
 .site-footer__upper, .site-footer__lower {
-  padding: 1em 0;
+  padding: 1rem 0;
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
@@ -18,13 +18,25 @@
   font-size: 18px;
 }
 
+@media only screen and (max-width: 480px) {
+  .site-footer__upper {
+    flex-direction: column;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .site-footer__hours {
+    width: 100%;
+  }
+}
+
 .hours__list, .hours-list ul, .hours__list li, .hours__list li ul {
   list-style: none;
   padding-left: 0;
 }
 
 .hours__list>li {
-  margin: 1em 0;
+  margin: 1rem 0;
 }
 
 .hours__type {
@@ -32,13 +44,21 @@
 }
 
 .site-footer__location>div {
-  margin: 1em 0;
+  margin: 1rem 0;
 }
 
 .site-footer__social {
-  padding: 1.25em;
-  min-width: 10em;
+  padding: 1.25rem;
+  min-width: 10rem;
   text-align: right;
+}
+
+@media only screen and (max-width: 480px) {
+  .site-footer__social {
+    width: 100%;
+    padding: 1rem 0;
+    text-align: center;
+  }
 }
 
 .site-footer__social .social__icon {
