--- a/wp-content/themes/reactfit/react-src/src/components/Footer.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Footer.css
@@ -47,6 +47,12 @@
   margin: 1rem 0;
 }
 
+@media only screen and (max-width: 480px) {
+  .site-footer__location {
+    margin: auto;
+  }
+}
+
 .site-footer__social {
   padding: 1.25rem;
   min-width: 10rem;
