Style homepage call to action for mobile

--- a/wp-content/themes/reactfit/react-src/src/templates/Home.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/Home.css
@@ -11,6 +11,13 @@
   justify-content: space-evenly;
 }
 
+@media only screen and (max-width: 480px) {
+  .do-it {
+    font-size: 1.25rem;
+    text-align: center;
+  }
+}
+
 .do-it__blurb {
   padding: 0 1rem;
 }
