--- a/wp-content/themes/reactfit/react-src/src/global/typography.css
+++ b/wp-content/themes/reactfit/react-src/src/global/typography.css
@@ -19,6 +19,17 @@ h1, h2, h3, h4 {
   font-family: 'Montserrat', sans-serif;
 }
 
+.section__heading {
+  text-align: center;
+  font-size: 3rem;
+}
+
+@media only screen and (max-width: 480px) {
+  .section__heading {
+    font-size: 2.25rem;
+  }
+}
+
 a {
   color: #005fed;
   text-decoration: none;
