--- a/wp-content/themes/reactfit/react-src/src/modules/Hero.css
+++ b/wp-content/themes/reactfit/react-src/src/modules/Hero.css
@@ -10,6 +10,13 @@
   box-sizing: border-box;
 }
 
+@media only screen and (max-width: 480px) {
+  .hero {
+    height: auto;
+    min-height: 70vh;
+  }
+}
+
 .hero__tagline {
   text-align: left;
   color: #fff;
